--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://cdn.jsdelivr.net/gh/mnik01/nca-signer-js@latest/signer.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/mnik01/nca-signer-js@0.0.2-alpha/signer.js"></script>
 
 </head>
 <body>
